feat: implement user registration and password reset functionality