@@ -1,13 +1,17 @@
 package com.example.financeservice.service.user;
 
+import com.example.financeservice.exception.InvalidTokenException;
+import com.example.financeservice.exception.ResourceNotFoundException;
 import com.example.financeservice.model.User;
 import com.example.financeservice.repository.UserRepository;
+import com.example.financeservice.service.EmailService;
 import com.example.financeservice.service.metrics.MetricsService;
 import io.micrometer.core.instrument.Counter;
+import java.time.LocalDateTime;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
+import java.util.UUID;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
@@ -26,6 +30,7 @@ public class UserService implements UserDetailsService {
   private final UserRepository userRepository;
   private final PasswordEncoder passwordEncoder;
   private final MetricsService metricsService;
+  private final EmailService emailService;
 
   @Override
   @Transactional(readOnly = true)
@@ -47,7 +52,7 @@ public class UserService implements UserDetailsService {
               .password(user.getPassword())
               .authorities(user.getRoles().stream()
                   .map(SimpleGrantedAuthority::new)
-                  .collect(Collectors.toList()))
+                  .toList())
               .disabled(!user.isEnabled())
               .accountExpired(false)
               .credentialsExpired(false)
@@ -99,5 +104,78 @@ public class UserService implements UserDetailsService {
   @Transactional(readOnly = true)
   public long countByRole(String role) {
     return userRepository.countByRole(role);
+  }
+
+  @Transactional
+  public void requestPasswordReset(String email) {
+    User user = userRepository.findByEmail(email)
+        .orElseThrow(() -> {
+          log.error("Email not found for password reset: {}", email);
+          metricsService.recordExceptionOccurred("ResourceNotFoundException",
+              "requestPasswordReset");
+          return new ResourceNotFoundException("User not found with email: " + email);
+        });
+
+    String token = UUID.randomUUID().toString();
+    user.setPasswordResetToken(token);
+    user.setPasswordResetTokenExpiry(LocalDateTime.now().plusHours(24));
+    userRepository.save(user);
+
+    // Enviar email com token
+    emailService.sendPasswordResetEmail(user.getEmail(), token);
+    log.info("Password reset requested for email: {}", user.getEmail());
+  }
+
+  @Transactional
+  public void resetPassword(String token, String newPassword) {
+    User user = userRepository.findByPasswordResetToken(token)
+        .orElseThrow(() -> {
+          log.error("Invalid password reset token: {}", token);
+          metricsService.recordExceptionOccurred("ResourceNotFoundException", "resetPassword");
+          return new ResourceNotFoundException("Invalid or expired token");
+        });
+
+    if (user.getPasswordResetTokenExpiry().isBefore(LocalDateTime.now())) {
+      log.error("Password reset token expired for user: {}", user.getUsername());
+      metricsService.recordExceptionOccurred("InvalidTokenException", "resetPassword");
+      throw new InvalidTokenException("Password reset token has expired");
+    }
+
+    user.setPassword(passwordEncoder.encode(newPassword));
+    user.setPasswordResetToken(null);
+    user.setPasswordResetTokenExpiry(null);
+    userRepository.save(user);
+    log.info("Password reset successfully for user: {}", user.getUsername());
+  }
+
+  // Metodo para atualizar informações do usuário
+  @Transactional
+  public void updateUser(Long userId, String firstName, String lastName, String email) {
+    User user = userRepository.findById(userId)
+        .orElseThrow(() -> {
+          log.error("User not found with id: {}", userId);
+          metricsService.recordExceptionOccurred("ResourceNotFoundException", "updateUser");
+          return new ResourceNotFoundException("User not found with id: " + userId);
+        });
+
+    if (email != null && !email.equals(user.getEmail())) {
+      if (userRepository.existsByEmail(email)) {
+        log.error("Email already in use: {}", email);
+        metricsService.recordExceptionOccurred("IllegalArgumentException", "updateUser");
+        throw new IllegalArgumentException("Email already in use");
+      }
+      user.setEmail(email);
+    }
+
+    if (firstName != null) {
+      user.setFirstName(firstName);
+    }
+
+    if (lastName != null) {
+      user.setLastName(lastName);
+    }
+
+    userRepository.save(user);
+    log.info("User updated: {}", user.getUsername());
   }
 }
